<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rel1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="@string/emailormobileno"
            android:hint="@string/emailormobileno"
            android:inputType="text"
            android:textColorHint="@android:color/holo_blue_dark"
            app:met_autoValidate="false"
            app:met_bottomTextSize="8dp"
            app:met_clearButton="true"
            app:met_errorColor="@android:color/holo_red_dark"
            app:met_floatingLabel="normal"
            app:met_floatingLabelAlwaysShown="false"
            app:met_floatingLabelAnimating="true"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelText="@string/emailormobileno"
            app:met_floatingLabelTextColor="@android:color/holo_blue_dark"
            app:met_floatingLabelTextSize="14dp"
            app:met_helperText=""
            android:text="9894591650"
            app:met_helperTextAlwaysShown="false"
            app:met_helperTextColor="@android:color/background_dark"
            app:met_iconLeft="@drawable/user"
            app:met_iconPadding="8dp"
            app:met_primaryColor="@android:color/holo_blue_dark"
            app:met_singleLineEllipsis="true"
            app:met_underlineColor="@color/white" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:met_floatingLabel="normal"
            app:met_floatingLabelAlwaysShown="false"
            app:met_floatingLabelAnimating="true"
            android:text="ddddddd"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelText="@string/password"
            app:met_floatingLabelTextColor="@android:color/holo_blue_dark"
            app:met_floatingLabelTextSize="14dp"
            app:met_primaryColor="@android:color/holo_blue_dark"
android:inputType="textPassword"
            android:layout_margin="8dp"
            android:autofillHints="@string/password"
            android:hint="@string/enterpassword"
            android:textColorHint="@android:color/holo_blue_dark"
            app:met_iconLeft="@drawable/lock"
            app:met_iconPadding="8dp"
            app:met_clearButton="true"
            app:met_maxCharacters="10"
            app:met_minCharacters="6"
            android:maxLength="10"
            app:met_singleLineEllipsis="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/login"
            android:id="@+id/login_btn"
            android:textColor="@color/white" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotpassword"
            android:layout_gravity="right"
            android:layout_margin="8dp"
            android:text="@string/forgotpassword" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:gravity="right"
                android:text="@string/account_yet" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="left"
                android:text="@string/signup"
                android:id="@+id/signup_btn"
                android:textColor="@android:color/holo_blue_dark" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
