<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/inputval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enterval"
        android:hint="@string/enterval"
        android:inputType="text"
        android:textColorHint="@android:color/holo_blue_dark"
        android:textSize="12dp"
        app:met_autoValidate="false"
        app:met_bottomTextSize="8dp"
        app:met_clearButton="true"
        app:met_errorColor="@android:color/holo_red_dark"
        app:met_floatingLabel="normal"
        app:met_floatingLabelAlwaysShown="false"
        app:met_floatingLabelAnimating="true"
        app:met_floatingLabelPadding="8dp"
        app:met_floatingLabelText="@string/enterval"
        app:met_floatingLabelTextColor="@android:color/holo_blue_dark"
        app:met_floatingLabelTextSize="14dp"
        app:met_helperText=""
        app:met_helperTextAlwaysShown="false"
        app:met_helperTextColor="@android:color/background_dark"
        app:met_iconPadding="8dp"
        app:met_primaryColor="@android:color/holo_blue_dark"
        app:met_singleLineEllipsis="true"
        app:met_underlineColor="@color/white" />


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="2"
    android:orientation="horizontal">
    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"/>

    <Button
        android:id="@+id/cancel"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"/>
</LinearLayout>


</LinearLayout>
