<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar" />


    <ImageView
        android:id="@+id/imgforgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:minHeight="90dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/forgot_img" />

    <TextView
        android:id="@+id/contenttitleforgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/forgot_password_content"
        android:textAlignment="center" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/emailormobileno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="@string/emailormobileno"
            android:hint="@string/emailormobileno"
            android:inputType="text"
            android:textColorHint="@android:color/holo_blue_dark"
            app:met_autoValidate="false"
            app:met_bottomTextSize="8dp"
            app:met_clearButton="true"
            app:met_errorColor="@android:color/holo_red_dark"
            app:met_floatingLabel="normal"
            app:met_floatingLabelAlwaysShown="false"
            app:met_floatingLabelAnimating="true"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelText="@string/emailormobileno"
            app:met_floatingLabelTextColor="@android:color/holo_blue_dark"
            app:met_floatingLabelTextSize="14dp"
            app:met_helperText=""
            app:met_helperTextAlwaysShown="false"
            app:met_helperTextColor="@android:color/background_dark"
            app:met_iconLeft="@drawable/user"
            app:met_iconPadding="8dp"
            app:met_primaryColor="@android:color/holo_blue_dark"
            app:met_singleLineEllipsis="true"
            app:met_underlineColor="@color/white" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/enterotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:autofillHints="@string/enterotp"
            android:hint="@string/enterotp"
            android:inputType="number"
            android:maxLength="6"
            android:textColorHint="@android:color/holo_blue_dark"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_floatingLabelAlwaysShown="false"
            app:met_floatingLabelAnimating="true"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelText="@string/enterotp"
            app:met_floatingLabelTextColor="@android:color/holo_blue_dark"
            app:met_floatingLabelTextSize="14dp"
            app:met_iconLeft="@drawable/otp"
            app:met_iconPadding="8dp"
            app:met_maxCharacters="6"
            app:met_minCharacters="6"

            app:met_primaryColor="@android:color/holo_blue_dark"
            app:met_singleLineEllipsis="true" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textPassword"
            android:autofillHints="@string/password"
            android:hint="@string/enterpassword"
            android:maxLength="10"
            android:textColorHint="@android:color/holo_blue_dark"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_floatingLabelAlwaysShown="false"

            app:met_floatingLabelAnimating="true"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelText="@string/password"
            app:met_floatingLabelTextColor="@android:color/holo_blue_dark"
            app:met_floatingLabelTextSize="14dp"
            app:met_iconLeft="@drawable/lock"
            app:met_iconPadding="8dp"
            app:met_maxCharacters="10"
            app:met_minCharacters="6"
            app:met_primaryColor="@android:color/holo_blue_dark"
            app:met_singleLineEllipsis="true" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/confirmpassword"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:autofillHints="@string/password"
            android:hint="@string/enterconfirmpassword"
            android:maxLength="10"
            android:textColorHint="@android:color/holo_blue_dark"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_floatingLabelAlwaysShown="false"
            app:met_floatingLabelAnimating="true"
            app:met_floatingLabelPadding="8dp"
            app:met_floatingLabelText="@string/enterconfirmpassword"
            app:met_floatingLabelTextColor="@android:color/holo_blue_dark"
            app:met_floatingLabelTextSize="14dp"
            app:met_iconLeft="@drawable/lock"
            app:met_iconPadding="8dp"
            app:met_maxCharacters="10"
            app:met_minCharacters="6"
            app:met_primaryColor="@android:color/holo_blue_dark"
            app:met_singleLineEllipsis="true" />


        <Button
            android:id="@+id/send_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/sendotp"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>